samples/_failures_safe/1761287097_61eb89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_338b0cf5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_338b0cf5.c:178:63: error: expected ‘;’ at end of input
  178 |         else if (parse_string(input, &pos, &token)) parsed = 1
      |                                                               ^
      |                                                               ;
./samples/SAFE/__tmp_338b0cf5.c:178:9: error: expected declaration or statement at end of input
  178 |         else if (parse_string(input, &pos, &token)) parsed = 1
      |         ^~~~
./samples/SAFE/__tmp_338b0cf5.c:178:9: error: expected declaration or statement at end of input
